added a get with a local cache for fun
